Fix overlapped back link

--- a/themes/shiro/assets/src/sass/css/scss/objects/_header.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_header.scss
@@ -403,7 +403,6 @@ $header-bp-mw: 1049px;
 		right: 50%;
 		margin-left: -50vw;
 		margin-right: -50vw;
-		margin-top: -2rem;
 		max-height: 24rem;
 
 		&.ungrid-extra-height {
